FIx html alignment issue where only first 3 helices were colored

--- a/RfamWeb/root/static/css/alignment.css
+++ b/RfamWeb/root/static/css/alignment.css
@@ -3,13 +3,13 @@
    jt6 20060601 WTSI.
 
    Style the markup of multiple sequence alignments
-   
+
    $Id: alignment.css,v 1.2 2008-11-18 16:55:09 jt6 Exp $
-   
+
    Copyright (c) 2007: Genome Research Ltd.
-   
+
    Authors: Rob Finn (rdf@sanger.ac.uk), John Tate (jt6@sanger.ac.uk)
-   
+
    This is free software; you can redistribute it and/or modify it under
    the terms of the GNU General Public License as published by the Free Software
    Foundation; either version 2 of the License, or (at your option) any later
@@ -22,7 +22,7 @@
 
    You should have received a copy of the GNU General Public License along with
    this program. If not, see <http://www.gnu.org/licenses/>.
-    
+
 */
 
 /* rules for the static HTML rendering */
@@ -104,16 +104,15 @@ a.focus {
 }
 
 /* column classes. May not be used by Rfam... */
-.o  { background-color: #ff7f11 } /* orange */
-.y, .Y { background-color: #ffff11 } /* yellow */
+.o, .e  { background-color: #ff7f11 } /* orange */
+.y, .Y, .f { background-color: #ffff11 } /* yellow */
 .b  { background-color: #9999FF } /* lilac */
-.g  { background-color: #99FF99 } /* light green */
-.r  { background-color: #FF9999 } /* pink */
-.c  { background-color: #99FFFF } /* cyan */
+.g, .d  { background-color: #99FF99 } /* light green */
+.r, .h  { background-color: #FF9999 } /* pink */
+.c, .j  { background-color: #99FFFF } /* cyan */
 .w  { background-color: #FFFFFF } /* white */
 .as { background-color: #000;             color: #FFF }
 .pas{ background-color: #666;             color: #FFF }
 .sas{ background-color: #999;             color: #FFF }
 .H  { background-color: #F00  !important; color: #FFF }
 .E  { background-color: #FF0  !important; color: #000 }
-
